export const snapshot = {};

snapshot[`duolingo feed 1`] = `
[
  {
    data: [
      "🎉 Azra Korkmaz Duo Queen completed a 125 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Gül did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 fufu earned a total of 7500 xp!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 oby q completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Rossella completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 fufu completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Marcelo Costa Filho completed a 125 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Miguel did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 astraea shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "💯 Nick completed a 2100 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 ✨Soͥumͣyͫa✨ shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Гончаров кинни бсд completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Гончаров кинни бсд did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 VidPro Surabaya completed a 365 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Theodor Berkinblit did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Frank completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Candice did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Гончаров кинни бсд completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💖 Stellamusicale finished top 3 on the leaderboard and was promoted to the sapphire league!",
    ],
    level: "log",
  },
  {
    data: [
      "🙏 Stellamusicale came back to learn after a long time!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Koro did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 Debbie completed a 300 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Кира (mina) Хасанова completed a 75 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Iqra did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 walat completed a 1900 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Andrewmonti2013 completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 Andrewmonti2013 earned a total of 30000 xp!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Ahmet B completed 10 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Yeilin Peña completed 45 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Ana Lucia Santos did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Elizabeth Liu completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🙏 Tuğrul you and dean completed the friends quest!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Petinol completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Ayca completed a 125 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 AŽ completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 AŽ did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Gülşah completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 Dino shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "👍 Dino shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Dino completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Marcelo Costa Filho completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Rossella did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Rossella followed you back!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Kailey469 completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 oby q completed 10 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Nesrin completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Kat completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Carmen completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 Funda Yılmaz earned a total of 2000 xp!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Kailey469 completed a 75 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 dilma completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Iqra completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Koranda did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "🙏 Mad Man came back to learn german after 1 year!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Yen completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Paula Corina completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 RightPlaceWrongPersonByRM shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Mary completed 15 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Jenny Lee completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 Laura completed a 200 day streak!",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo feed --engage 1`] = `
[
  {
    data: [
      "🎉 Azra Korkmaz Duo Queen completed a 125 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 fufu earned a total of 7500 xp!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 oby q completed the january challenge!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 astraea shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "💖 Stellamusicale finished top 3 on the leaderboard and was promoted to the sapphire league!",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows 1`] = `
[
  {
    data: [
      "👤 Following 354 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 361 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows --follow 1`] = `
[
  {
    data: [
      "👤 Following 354 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 361 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows --unfollow 1`] = `
[
  {
    data: [
      "❌ Unfollowed pavel_80.",
    ],
    level: "log",
  },
  {
    data: [
      "❌ Unfollowed dieprinzessin.",
    ],
    level: "log",
  },
  {
    data: [
      "❌ Unfollowed guffodelleneve.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Following 351 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 361 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo league 1`] = `
[
  {
    data: [
      "🩷  Pearl League              
 1. paulettka Kozdra   1415 XP
 2. Ina                1284 XP
 3. galina              764 XP
 4. winters 😡          758 XP
 5. Michele 😎          645 XP
 6. Karolina            580 XP
 7. Janet Koyumdjian    487 XP
 8. Mika 🇸🇪             464 XP
 9. cloclo              454 XP
10. Alexey SKV          446 XP
11. Malu                445 XP
12. AnFe                436 XP
13. SimonG              396 XP
14. Tuğrul 👀           385 XP
15. Ania                376 XP
16. Blai                355 XP
17. Juraj               351 XP
18. Mona. 🇩🇪            348 XP
19. Emese Szabó         295 XP
20. Yvonne 😺           279 XP
21. Bravo 😎            266 XP
22. Annajc 😡           261 XP
23. Ziv Dor Guetta 🇪🇸   248 XP
24. Bíborka Salamon     232 XP
25. fulgencio           220 XP
26. Angela              217 XP
27. Ujco                179 XP
28. Anne Sophie         176 XP
29. Nathan Lesman       168 XP
30. Wera Bos 🍿         162 XP",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo league --follow 1`] = `
[
  {
    data: [
      "🩷  Pearl League              
 1. paulettka Kozdra   1415 XP
 2. Ina                1284 XP
 3. galina              764 XP
 4. winters 😡          758 XP
 5. Michele 😎          645 XP
 6. Karolina            580 XP
 7. Janet Koyumdjian    487 XP
 8. Mika 🇸🇪             464 XP
 9. cloclo              454 XP
10. Alexey SKV          446 XP
11. Malu                445 XP
12. AnFe                436 XP
13. SimonG              396 XP
14. Tuğrul 👀           385 XP
15. Ania                376 XP
16. Blai                355 XP
17. Juraj               351 XP
18. Mona. 🇩🇪            348 XP
19. Emese Szabó         295 XP
20. Yvonne 😺           279 XP
21. Bravo 😎            266 XP
22. Annajc 😡           261 XP
23. Ziv Dor Guetta 🇪🇸   248 XP
24. Bíborka Salamon     232 XP
25. fulgencio           220 XP
26. Angela              217 XP
27. Ujco                179 XP
28. Anne Sophie         176 XP
29. Nathan Lesman       168 XP
30. Wera Bos 🍿         162 XP",
    ],
    level: "log",
  },
]
`;
